--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Book Notes</title>
-    <link rel="stylesheet" href="styles/main.css">
+    <link rel="stylesheet" href="/styles/main.css">
 </head>
 <body>
 <header>
@@ -14,11 +14,11 @@
             <div class="options-icon-part"></div>
             <div class="options-icon-part"></div>
         </div>
-        <h1>BookPal</h1>
+        <a href="/"><h1>BookPal</h1></a>
     </div>
 
     <div>
-        <form action="/add" method="GET">
+        <form action="/add-form" method="get">
             <input type="submit" value="ADD BOOK">
         </form>
     </div>
